messaging_app/blue_deployment.yaml
# messaging_app/blue_deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-blue
  labels:
    app: django-app
    version: blue
spec:
  # The number of stable replicas to maintain
  replicas: 2 
  
  # Strategy for updating the deployment
  strategy:
    type: RollingUpdate 
    rollingUpdate:
      # Allows one extra pod to be created beyond the desired replica count during the update
      maxSurge: 1       
      # Requires that zero pods be unavailable during the update (zero downtime)
      maxUnavailable: 0 
      
  # Selector links this Deployment to the Pods with the specified labels
  selector:
    matchLabels:
      app: django-app
      version: blue
      
  # Template defines the desired state of the Pods created by this Deployment
  template:
    metadata:
      labels:
        app: django-app
        version: blue
    spec:
      containers:
      - name: django-app
        # **UPDATED IMAGE VERSION FOR ROLLING UPDATE**
        image: <YOUR_DJANGO_IMAGE>:v2.0 
        ports:
        - containerPort: 8000
